<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/home_fragment_title" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_menu_stars"
        android:title="@string/favourites_fragment_title" />

    <group
            android:id="@+id/bottom_menu"
            android:checkableBehavior="none">
        <item
            android:id="@+id/settingsFragment"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/settings_fragment_title"/>

    </group>

</menu>
