<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        tools:context=".SettingsFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/themes_title"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:id="@+id/textView2" android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="56dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="680dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="269dp"/>
        <LinearLayout
                android:layout_width="301dp"
                android:layout_height="64dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/linearLayout4"
                android:layout_marginTop="88dp"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/textView3"
                android:layout_marginEnd="24dp" android:layout_marginStart="24dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_chainStyle="spread">

            <ToggleButton
                    android:text="ToggleButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/toggleButton"
                    android:layout_weight="1"
                    android:layout_margin="0dp"/>
            <ToggleButton
                    android:text="ToggleButton"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/toggleButton2"
                    android:layout_weight="1"
                    android:layout_margin="0dp"/>


        </LinearLayout>
        <TextView
                android:text="@string/category_title"
                android:layout_width="222dp"
                android:layout_height="32dp"
                android:id="@+id/textView3" android:textSize="24sp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="55dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="134dp"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout3" android:layout_marginBottom="16dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="299dp"
                android:layout_height="386dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5" android:layout_marginEnd="24dp"
                android:id="@+id/linearLayout3"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView3"
                android:layout_marginBottom="88dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="24dp">
            <CheckBox
                    android:text="@string/culture_category"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/checkBox" android:layout_weight="1"/>
            <CheckBox
                    android:text="@string/international_category"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/checkBox2" android:layout_weight="1"/>
            <CheckBox
                    android:text="@string/politic_category"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/checkBox8" android:layout_weight="1"/>
            <CheckBox
                    android:text="@string/health_category"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/checkBox9" android:layout_weight="1"/>
            <CheckBox
                    android:text="@string/sport_category"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/checkBox10" android:layout_weight="1"/>
            <CheckBox
                    android:text="@string/tech_category"
                    android:layout_width="match_parent"
                    android:layout_height="0dp" android:id="@+id/checkBox11" android:layout_weight="1"/>
        </LinearLayout>
        <androidx.constraintlayout.widget.Group android:layout_width="wrap_content" android:layout_height="wrap_content"
                                                android:id="@+id/group"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>